fix bug for rewards not aligning

--- a/client/src/components/Consent.scss
+++ b/client/src/components/Consent.scss
@@ -32,7 +32,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 60%
+    width: 60vw;
   }
   
   &-title {
